<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_write"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_signout"
            android:icon="@android:drawable/ic_secure"
            android:title="@string/menu_signout" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />

    </group>



</menu>
